--- a/project/vipinstagram/disclaimer/id/index.html
+++ b/project/vipinstagram/disclaimer/id/index.html
@@ -50,18 +50,21 @@
                               <li>Aplikasi ini buatan asli anak Indonesia. Terlepas segala kekurangannya, mohon dibantu, ya. Terimakasih atas dukungannya!<br></li>
                               <li>Pastikan beri izin bila diminta, jika tidak fitur tidak akan berfungsi.<br></li>
                               <li>Aplikasi ini tidak mengumpulkan data pengguna akhir yang sensitif, tidak mengumpulkan akun atau kata sandi Instagram, Twitter, dll. milik Anda.<br></li>
+                              <li>Aplikasi ini tidak menyediakan atau menyertakan media atau konten apa pun.</li>
+                              <li> Kami tidak mendukung materi streaming atau unduhan yang dilindungi hak cipta tanpa izin dari pemegang hak cipta.</li>
                               <li>Sebagian ISP seperti di Indonesia meblokir Reddit, Vimeo, dll. Pakai VPN berbayar, proxies, dll., atau manut jaga aman.<br></li>
+                              <li>Unduhan pasti gagal dalam tiga kondisi, yaitu bila: ruang penyimpanan minimal, offline, dan situs tidak terdukung. Unduhan gagal akan dicoba ulang khusus untuk masalah kapasitas penyimpanan bila ruang cukup kembali dan hanya bila pekerjaan yang terjadwal tidak dihentikan paksa oleh sistem atau daluarsa.</li>
                               <li>Harap cek kecepatan internet di <a href="https://fast.com">fast.com</a>, atau instal Internet Speed Meter, dll. Internet lelet, jangan harap.<br></li>
                               <li>Fitur unduhan yang menyenangkan hanya bisa via web internal aplikasi (aka browser mini), bukan aplikasi resmi atau browser luar. Periksa <b>Cara pemakaian</b><br></li>
                               <li>Semua unduhan hanya mungkin bila aset media tersimpan internal pada situs terdukung, atau jaringan mereka. Sejumlah situs seperti Reddit, atau Twitter, mengarahkan tautan ke luar seperti cnn.com, dll. Situs luar belum terdukung. Harap cari media yang melekat ke situs terdukung.<br></li>
                               <li>Sebagian situs seperti Reddit atau Twitter menempelkan postingan/ tweet di postingan lain. Unduhan hanya mungkin untuk postingan mandiri, bukan postingan yang ditempelkan. Tinggal kunjungi postingan asli guna mengunduh.<br></li>
                               <li>Video Youtube yang ditempel di Reddit, Twitter, dll. TIDAK didukung.<br></li>
                               <li>Tautan ke kontent sensitif atau akun privat digawangi token sensitif-waktu. Artinya bisa hangus beberapa detik kemudian. Bila gagal unduh gara-gara lelet atau lain hal, tautan akan hangus. Hapus unduhan gagal, dan unduh ulang.<br></li>
-                              <li>Bila aplikasi macet, atau crash, harap coba ulang. Mungkin tidak terjadi terusa-terusan.<br></li>
+                              <li>Bila aplikasi macet, atau crash, harap coba ulang. Mungkin tidak terjadi terus-terusan.<br></li>
                               <li>Jangan skrap! Akun dan IP Anda bisa kena b.a.n. Bila kena, tidak akan bisa akses situs. Bikin bakup, banyak, VPN berbayar, proxy, dll. VPN gratisan bisa menurunkan kecepatan dari 1MB jadi 100KB. Bila tidak paham, jangan skrap!<br></li>
                               <li>Khusus perihal berbagi ke sosmed: Sebagian aplikasi bisa menerima foto lebih dari satu seperti Facebook, Whatsapp, Twitter, dll., sebagian lagi hanya bisa terima satu foto atau video seperti Instagram, Reddit, dll. Harap mafhum, dan jangan kirim tinjauan negatif untuk sesuatu yang tidak didukung oleh aplikasi resmi menurut standard Android. Ini di luar kuasa kita tanpa memakai API mereka.</li>
                               <li>Agar bisa menyimpan unduhan di folder publik/ bersama/ eksternal dan Anda bisa melihat hasil unduhan, pastikan akses penyimpanan diizinkan. Jika ditolak, unduhan disimpan di memori internal yang bisa berakibat kehabisan ruang penyimpanan, dan hanya bisa dilihat bila perangkat Anda telah di-root. Alternatif lain, pilih folder sendiri via opsi Atur Folder.</li>
-                              <li>Bintang satu berarti kebencian di Android. Saya bikin aplikasi ini dalam tempo 3000 jam. Mohon jadi bahan pertimbangan terlepas segala kekurangannya.</li>
+                              <li>Bintang satu berarti kebencian di Android. Saya bikin aplikasi ini dalam tempo 3000 jam. Mohon jadi bahan pertimbangan terlepas segala kekurangannya. Harap gunakan menu <b>Umpan balik</b> untuk saran perbaikan, dan umpan balik.</li>
                             </ul>
                           </div>
                         </details>
