--- a/project/vipinstagram/faq/id/index.html
+++ b/project/vipinstagram/faq/id/index.html
@@ -111,6 +111,7 @@
                               <li>Ruang penyimpanan besar (30gb+ amanya). Jika minim, bisa error kekurangan ruang. Jangan panik.
                             Pijit <b>Abort</b>. Atur ruang, pindah dan hapus berkas. Ganti atau masukkan kartu memori kosong. Pastikan dipilih via tombol <b>Atur folder</b>.
                             </li>
+                            <li>Non-aktifkan <b>Optimasi batre</b> bila skraping. Skraping perlu waktu, and aplikasi bisa dimatikan oleh sistem karena makan waktu. <br><b>Cara</b>: 1. Buka Setelan sistem → Aplikasi.<br>2. Cari aplikasi ini (<b>VIPDownloader</b>). <br>3. Matikan <b>Optimasi batre</b>. Tiap perangkat beda cara menon-aktikan fitur ini, silakan buka manualnya.</li>
                             </ul>
                           </div>
                         </details>
@@ -188,6 +189,77 @@
                           <summary>Saya ingin menu hamburger, bukan panah rumah-balik.</summary>
                           <div>
                             Buka <b>Pengaturan > Penampilan > Hamburger di mana-mana</b>. Aktifkan untuk menampilkan hamburger di mana-mana. Berguna untuk akses cepat ke item menu. Kemudian Anda dapat memakai panah navbar perangkat untuk pulang. Atau bisa juga gesek dari tepi kiri untuk membuka menu.
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Cara menutup notifikasi?</summary>
+                          <div>
+                            <b>Setingan > Mode privat > Non-aktifkan servis</b>. Notifikasi perlu siaga guna memantau <b>SALIN TAUTAN</b> bila perlu. Matikan saja bila selalu memakai mode Privat.
+
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Watermark video bekerja?</summary>
+                          <div>
+                            Maaf, belum. Harap abaikan. Hanya jalan buat foto.
+
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Saya unduh satu postingan, tapi poin berkurang 10?</summary>
+                          <div>
+                            Berlaku untuk versi GRATIS saja. Satu postingan bisa muat 10 media (foto/ video) seperti tampak pada postingan carousel. Unduhan per foto/ video, bukan postingan.
+
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Cara muat ulang laman web?</summary>
+                          <div>
+                            Usap ke bawah pada layar seperti pada aplikasi Instagram.
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Saya unduh tapi gagal?</summary>
+                          <div>
+                            <b>TODO</b>: Might happen at slow connection with large size. When broken, the app may fail to display it. Try deleting it via Delete button at gallery display. Or long press it at grid menu display to reveal the Delete button. Or re-download it beforehand if prompted. Be informed, for sensitive contents, the links are tokenized and can be expired in just seconds. Re-download using old links might break. Simply delete it, and re-download. Do not download during slow connection.
+
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Cara kerja sistem reward atau poin?</summary>
+                          <div>
+                            <b>TODO</b>: Only applicable to FREE version to be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after the countdown threshold met, you will earn 10 points. If you close it before the threshold, the feature (scraping, free watermarks, etc.) will not be executed.
+                            <ul>
+                              <li>1 download = 1 point at regular one-at-a-time download.</li>
+                              <li>Scraping requires some minimum points. Scraping can download 100 or 300 items at once if you meet the countdown threshold and minimum points.</li>
+                              <!-- <li>Ads-free requires 6000 points. No ads (banner or fullscreen ones) will be shown.</li> -->
+                            </ul>
+
+                            Those are the obvious advantages of the reward, or point system. <br><br>Shortly, when you have free time to be interrupted, be sure to keep earning points so that when you don't want interruptions, you are totally free of them. If you intend to download many per day, consider keeping your points above the minimum to get ads-free interruptions. <br><br>If you are sick of points, consider a PRO version.
+
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Versi GRATIS vs. PRO?</summary>
+                          <div>
+                            <b>TODO</b>: Aside from ads, below are a few differences:
+                            <br><b>FREE:</b>
+                            <ol>
+                              <li>Has reward or point system in return for app features.</li>
+                              <li>Scraper will be killed if the app is put into background or overview.</li>
+                              <li>Scraper will start at the end of countdown after watching video with the above-mentioned minimum points. If the video is closed before the countdown ends, no scraping spider will run.</li>
+                              <li>No watermark option is not saved.</li>
+                              <li>My watermark requires PRO.</li>
+                            </ol>
+                            <br><b>PRO:</b>
+                            <ol>
+                              <li>No hustle, no reward system.</li>
+                              <li>Scraper persists as long as the app is open, not destroyed.</li>
+                              <li>Scraper starts immediately.</li>
+                              <li>No watermark option is saved.</li>
+                              <li>My watermark replaces credits with yours.</li>
+                            </ol>
+
                           </div>
                         </details>
                         <details>
