--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -135,6 +135,7 @@
                               <li>Large size of device external storage (30gb+ to play nice), else you will be locked down due to out of space exception. Do not panic, though. Just kill the app, or power-off the device at worst. Manage your space, move or delete files.
                                 Switch or plug in a new empty card. Be sure to select it via <b>Organize directories</b>.</li>
                               <li><b>FREE</b> version: some minimum points</li>
+                              <li>Scraping requires time, be sure to disable <b>Battery Optimization</b> for this app, otherwise killed by the system. <br><b>Steps</b>: 1. Open System Settings → Application/ Apps.<br> 2. Find this app (<b>VIPDownloader</b>). <br> 3. Disable <b>Battery Optimization</b>. Some devices may have different way to disable it.</li>
                             </ul>
 
                           </div>
@@ -288,7 +289,7 @@
                         <details>
                           <summary>I downloaded one post, but my points deducted by 10?</summary>
                           <div>
-                            At one post, it may contain 10 media such as seen at carousel post. The download is per media item, not post.
+                            FREE version only. At one post, it may contain 10 media such as seen at carousel post. The download is per media item, not post.
 
                           </div>
                         </details>
@@ -308,15 +309,14 @@
                         <details>
                           <summary>How does the reward or point system work?</summary>
                           <div>
-                            Only applicable to FREE version to minimize ads interruptions, or be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after the countdown threshold met, you will earn 10 points. If you close it before the threshold, the feature (scraping, free watermarks, etc.) will not be executed.
+                            Only applicable to FREE version to be eligible for scrapings. Tap the top-right corner reward icon, or keep watching when presented by the app features. <br><br>Everytime you watch a video ad after the countdown threshold met, you will earn 10 points. If you close it before the threshold, the feature (scraping, free watermarks, etc.) will not be executed.
                             <ul>
                               <li>1 download = 1 point at regular one-at-a-time download.</li>
                               <li>Scraping requires some minimum points. Scraping can download 100 or 300 items at once if you meet the countdown threshold and minimum points.</li>
-                              <li>Ads-free requires 6000 points. No ads (banner or fullscreen ones) will be shown.</li>
+                              <!-- <li>Ads-free requires 6000 points. No ads (banner or fullscreen ones) will be shown.</li> -->
                             </ul>
 
-                            Those are the obvious advantages of the reward, or point system. <br><br>Shortly, when you have free time to be interrupted,
-                            be sure to keep earning points so that when you don't want interruptions, you are totally free of them. If you intend to download many per day, consider keeping your points above the minimum to get ads-free interruptions. <br><br>If you are sick of points, consider a PRO version.
+                            Those are the obvious advantages of the reward, or point system. <br><br>Shortly, when you have free time to be interrupted, be sure to keep earning points so that when you don't want interruptions, you are totally free of them. If you intend to download many per day, consider keeping your points above the minimum to get ads-free interruptions. <br><br>If you are sick of points, consider a PRO version.
 
                           </div>
                         </details>
