--- a/project/vipinstagram/license/index.html
+++ b/project/vipinstagram/license/index.html
@@ -88,7 +88,7 @@
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright 2015 Dmytro Tarianyk</span></small></a></p>
                               <hr>
-                              <p><a class="plain menuitem" href="#apache"><b>SQLiteAssetHelper</b> &#10143;<br>
+                              <!-- <p><a class="plain menuitem" href="#apache"><b>SQLiteAssetHelper</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2011 readyState Software Ltd</span></small></a></p>
                               <hr>
@@ -99,12 +99,12 @@
                               <p><a class="plain menuitem" href="#apache"><b>PRDownloader</b> &#10143;<br>
                                   <small>The Apache License<br>
                                   <span class="licenseowner">Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED</span></small></a></p>
-                              <hr>
-                              <!-- <p><a class="plain menuitem" href="#apache"><b>Fetch</b> &#10143;<br>
+                              <hr> -->
+                              <p><a class="plain menuitem" href="#apache"><b>Fetch</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright 2017 Tonyo Francis</span></small></a></p>
                               <hr>
-                              <p><a class="plain menuitem" href="#apache"><b>Fast-Android-Networking</b> &#10143;<br>
+                              <!-- <p><a class="plain menuitem" href="#apache"><b>Fast-Android-Networking</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2016 Amit Shekhar</span></small></a></p>
                               <hr> -->
