--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -148,6 +148,7 @@
                             <ul>
                               <li>Find and hit <b>Copy link</b>, normally displayed after clicking <b>three dots</b> icon, <b>SHARE</b> icon, or alike.</li>
                               <li>Or long press (not click) on <b>TIMESTAMP</b> if available.</li>
+                              <li>Or visit the video full page. Play the video. Skip ads, if any. Wait for 10s or so for the parser to do its job. If prompted, the site is supported.</li>
                               <li><b>Guess works</b>, not guaranteed: long press (not click) on any <b>TITLES</b>, or video <b>THUMBNAILS</b>, normally at listing pages. If supported you will be prompted. If not, then not supported.</li>
                             </ul>
                           </div>
