--- a/project/vipdrupal/disclaimer/id/index.html
+++ b/project/vipdrupal/disclaimer/id/index.html
@@ -7,7 +7,7 @@
 
   <meta name="title" content="Disclaimer | gaus" />
   <meta http-equiv="content-language" content="en" />
-  <meta name="description" content="Gaus Surahman built the DrupalPocket, Quotable quotes, VIP Downloader & Scraper for Instagram Photo Video, apps available as free and commercial apps." />
+  <meta name="description" content="Gaus Surahman built the DrupalPocket, Quotable quotes, DruPocket & Scraper for Instagram Photo Video, apps available as free and commercial apps." />
   <meta name="MobileOptimized" content="width" />
   <meta name="HandheldFriendly" content="true" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -46,7 +46,7 @@
                           <summary>Please be informed before reviews:</summary>
                           <div>
                             <ul>
-                              <li>Please do not submit negative reviews for fun. Use the provided Feedback channel to help improve the app instead. Negative reviews without followups and updates after being corrected are like hit-and-run, not constructive and disheartening. It is a labor of love for Drupal lovers. It took me 2000+ extensive hours to build this app. It is to foster Drupal! Please take it into account before submitting reviews. Stay awesome and helpful. Thank you for your kind considerations!</li>
+                              <li>Please do not submit negative reviews for fun. Use the provided Feedback channel to help improve the app instead. Negative reviews without followups and updates after being corrected are like hit-and-run, not constructive and disheartening. It is a labor of love for Drupal lovers to foster Drupal. Hopefully useful to stay updated in your busy days. Thank you for your kind considerations and positive supports!</li>
                               <li>The app doesn't collect sensitive end-user data. We do collect crash reports and user interactions using common third party analytics, and via your own conscious submission of the crash reports. Find the crash report at <b>About > Crash report</b>. If you don't submit it, no data is sent to us. You can also preview the submitted data on the email body before submission.</li>
                               <li>The following are needed to properly address potential crash solutions: Environment, Android version, OS version, DruPocket for Drupal version and flavor, Model, Device, Product, SDK, Screen density and resolution. You can also remove some info as needed. We do not share the collected data. Both are solely to improve user experience and engagement.</li>
                               <li>The DruPocket for Drupal offers additional features such as adding new personal notes/ todos or feeds, archiving, editing and deleting existing notes/ feeds. Only the pro version supports deletions, though. These optional features may need optional permissions. <b>Optional</b> means none is enabled until you do so:
@@ -71,25 +71,21 @@
                           <summary>Known bugs/ issues</summary>
                             <ul>
                               <li>This app doesn't use official APIs. Meaning it may break when the sites change their internals. If it was working, then suddenly breaks, please report via <b>Feedback</b> form. Kindly do not submit negative reviews when this happens. It is simply beyond our power. We'll do our best to fix it ASAP thanks to your reports. We'll consider using APIs at a more matured stage, so stay tuned.<br></li>
-                              <li>Reddit videos have no sound. I haven't been able to mux the audio, yet. Please ignore Reddit till future fixes.<br></li>
-                              <li>Camera not working in Android 10 (API 29). Please ignore till the next fix.<br></li>
-                              <li>Do not use the app web interface to register accounts. It is just a webview, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. Only use it once you have an account to login and download, not to register a new one. This also means the web app is not as robust as the official apps. Please bear with it.<br></li>
-                              <li>TikTok has poor UI for its web presence. SnackVideo has no usable web presence at all, use the official app instead. Nothing we can do about it.<br></li>
                             </ul>
                           </div>
                         </details>
                         <details>
                           <summary>Data collection</summary>
                           <div>
-                            <p>The app doesn't collect your social credentials, nor anything sensitive. It just borrows your authorized eyes under the hood. We do collect crash reports and user interactions using common third party analytics, and via your own conscious submission of the crash reports (<b>About > Crash report</b>). If you don't submit it, no data is sent to us. You can also remove the submitted data on the email body before submission.</p>
-                            <p>The following are needed to properly address potential crash solutions: Environment, Android version, OS version, VIP Downloader version and flavor, Model, Device, Product, SDK, Screen density and resolution. These data are generic to help troubleshoot and fix bugs. None is sensitive. You can also remove some info as needed. We do not share the collected data. Both are solely to improve user experience and engagement.</p>
+                            <p>The app doesn't collect anything sensitive. We do collect crash reports and user interactions using common third party analytics, and via your own conscious submission of the crash reports (<b>About > Crash report</b>). If you don't submit it, no data is sent to us. You can also remove the submitted data on the email body before submission.</p>
+                            <p>The following are needed to properly address potential crash solutions: Environment, Android version, OS version, DruPocket version and flavor, Model, Device, Product, SDK, Screen density and resolution. These data are generic to help troubleshoot and fix bugs. None is sensitive. You can also remove some info as needed. We do not share the collected data. Both are solely to improve user experience and engagement.</p>
                           </div>
                         </details>
 
                         <details>
                           <summary>Permissions</summary>
                             <div>
-                            <p>The VIP Downloader offers features such as adding and deleting pictures or videos, storing files at external removable storage.</p>
+                            <p>The DruPocket offers features such as adding and deleting pictures or videos, storing files at external removable storage.</p>
                             <p>These features need your permissions. Without these permissions the app is crippled:</p>
                             <ul>
                               <li>INTERNET to download pictures, or videos. The system may likely grant a little portion of this permission. This limited internet access may suffice. If however things do not function properly, be sure to enable the needed permissions.<br></li>
@@ -105,9 +101,9 @@
                         <details>
                           <summary>Acknowledgement</summary>
                             <div>
-                            <p>The VIP Downloader strives to leverage Android architecture components goodness.</p>
+                            <p>The DruPocket strives to leverage Android architecture components goodness.</p>
                             <p>However it is at early stage, please bear in mind! It has not been battle-tested against million devices, yet. Should you find a bug or hiccup, please use the Feedback.</p>
-                            <p>I am <b>Gaus Surahman</b>, the VIP Downloader app developer, and this app is, not affiliated to Instagram company or any of these photos or videos providers, nor own them. I am not held responsible for any abuse or misuse of this app. It is your own responsibility to use this app. The contents displayed in the application do not belong to me, or VIP Downloader. If however, you legal-proven 100% believe you find a copyrighted material, please contact me first, thank you, so I can resolve, or delete it for good.</p>
+                            <p>I am <b>Gaus Surahman</b>, the DruPocket app developer, and this app is, not affiliated to Instagram company or any of these photos or videos providers, nor own them. I am not held responsible for any abuse or misuse of this app. It is your own responsibility to use this app. The contents displayed in the application do not belong to me, or DruPocket. If however, you legal-proven 100% believe you find a copyrighted material, please contact me first, thank you, so I can resolve, or delete it for good.</p>
                             <p>By using this app, you acknowledge that you have read all of the above info properly. Should you have any question, please get in touch. Also check out the <b>About > Privacy policy</b> section for more related info.</p>
                             </div>
                         </details>
@@ -122,8 +118,7 @@
         </div>
       </div>
       <footer class="l-footer visible-desktop">
-        <p><small>© 2008 gaus <span class="visible-desktop"></span>| <a href="https://play.google.com/store/apps/details?id=vip.gaus.instagramphotovideodownloader.free"><b>VIP Downloader for Instagram, Facebook, Reddit, Tiktok, Twitter,
-                Vimeo</b></a></span></small></p>
+        <p><small>© 2008 gaus <span class="visible-desktop"></span>| <a href="https://play.google.com/store/apps/details?id=vip.gaus.drupalpocket.free"><b>DruPocket for Drupal</b></a></span></small></p>
       </footer>
     </div>
   </div>
