--- a/project/vipinstagram/disclaimer/id/index.html
+++ b/project/vipinstagram/disclaimer/id/index.html
@@ -49,6 +49,8 @@
                             <ul>
                               <li>Aplikasi ini buatan asli anak Indonesia. Terlepas segala kekurangannya, mohon dibantu, ya. Terimakasih atas dukungannya!<br></li>
                               <li>Pastikan beri izin bila diminta, jika tidak fitur tidak akan berfungsi.<br></li>
+                              <li>Bila trus muncul pesan 403 (Terlarang), ini artinya tautan terproteksi. Hapus dan abaikan. Biasanya tautan dari sumber situs berbayar. Ini di luar kuasa kita, maaf. Silakan jadi anggota berbayar dan unduh dari situs aslinya bila gagal terus, atau abaikan tautan. Baca Bantahan dan FAQ untuk info lebih rinci.</li>
+                              <li>Pastikan <b>Penghemat batre</b> dinon-aktifkan selama proses unduhan agar aplikasi bisa memprosesnya di latar belakang. Lokasi setelena bervariasi tergantung perangkat: <br>1. Setelan (Sistem) > Batre & performa > Penghemat batre: Matikan. <br>2. Setelan (Sistem) > Batre & performa > Penghemat batre aplikasi > VIPDownloader > Setelan latar belakang: Tidak ada pembatasan.</li>
                               <li>Aplikasi ini tidak mengumpulkan data pengguna akhir yang sensitif, tidak mengumpulkan akun atau kata sandi Instagram, Twitter, dll. milik Anda.<br></li>
                               <li>Aplikasi ini tidak menyediakan atau menyertakan media atau konten apa pun.</li>
                               <li> Kami tidak mendukung materi streaming atau unduhan yang dilindungi hak cipta tanpa izin dari pemegang hak cipta.</li>
