--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -108,6 +108,18 @@
                         </details>
 
                         <details>
+                          <summary>Nothing downloaded?</summary>
+                          <div>
+                            <b>Check out disclaimer for detailed info and glitches, basically:</b>
+                            <ol>
+                              <li>Be sure <b>Battery saver</b> feature turned off specific for this app to allow downloads via background processing. This varies based on devices: <br>1. (System) Settings > Battery & performance > Battery saver : Off. <br>2. (System) Settings > Battery & performance > App battery saver > VIPDownloader > Background settings: No restrictions. Check out your system <b>Settings</b> for the correct location of this particular settings.</li>
+                              <li>If you keep getting 403 (Forbidden) message, the link is likely blocked, gated or restricted. Either you have to register or login first, pay premium subscription if any such requirements. Other failures like 404 (Not Found), etc. will also be prompted. At any rate, we cannot download if such failures happen, sorry. They are beyond our power. Delete such failing  processed links. Please try other links instead.</li>
+                            </ol>
+
+                          </div>
+                        </details>
+
+                        <details>
                           <summary>Why does the image have artifacts?</summary>
                           <div>
                               To avoid out of memory errors, images are cached and cropped to fit screen when being displayed. When being shared, the original large image is taken, instead. You can view original images at your preferred folders. Meaning no worries.
