--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -44,7 +44,7 @@
                           <summary>Instagram</summary>
                           <div>
                             <b>A. Via internal web app interface:</b>
-                            Everything is done in one step. Choose one, not all.
+                            This is a very minimal built-in browser. Everything is done in one step. Choose one, not all.
                             <ol>
                               <li>Long press on any small thumbnails (videos or images) at listing pages: <i>/tags, /explore, /profile, or search pages</i>, etc.</li>
                               <li>Or tap the <b>BOOKMARK</b> icon.</li>
@@ -57,7 +57,7 @@
                               <li>Hit <b>Copy link</b>.</li>
                               <li>Or hit <b>Share link</b>, and find <b>VIP Downloader</b> icon.</li>
                             </ol>
-                            <p>Be informed! Option B and scraping may require you providing dummy credentials via <b>Settings > Accounts</b> due to restrictions. Option B may trigger annoying <b>New login</b> email warnings due to being less persistent sessions. Please use the internal (option A) for convenience regardless its limitations -- due to being web app, not native app. The same principle likely applies to other supported sites, unless otherwise stated.</p>
+                            <p>Be informed! Option B and scraping may require you providing dummy credentials via <b>Settings > Accounts</b> due to restrictions. Option B may trigger annoying <b>New login</b> email warnings due to being less persistent sessions. Please use the internal (option A) for convenience regardless its limitations -- due to being web app, not native app. The same principle likely applies to other supported sites, unless otherwise stated. Scraping requires Option A.</p>
                             <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
 
                           </div>
@@ -149,7 +149,7 @@
                               <li>Find and hit <b>Copy link</b>, normally displayed after clicking <b>three dots</b> icon, <b>SHARE</b> icon, or alike.</li>
                               <li>Or long press (not click) on <b>TIMESTAMP</b> if available.</li>
                               <li>Or visit the video full page. Play the video. Skip ads, if any. Wait for 10s or so for the parser to do its job. If prompted, the site is supported.</li>
-                              <li><b>Guess works</b>, not guaranteed: long press (not click) on any <b>TITLES</b>, or video <b>THUMBNAILS</b>, normally at listing pages. If supported you will be prompted. If not, then not supported.</li>
+                              <li><b>Guess works</b>, not guaranteed: long press (not click) on any <b>TITLES</b>, or video <b>THUMBNAILS</b>, normally at listing pages. If supported you will be prompted, processed for success or failure. If failed, then not supported.</li>
                             </ul>
                           </div>
                         </details>
@@ -161,6 +161,8 @@
                               <li>Be warned! Do not use the app web interface to register accounts. It is just a WebView, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. Almost similar to LITE versions of any official apps -- Twitter lite, Facebook lite, etc. Only less elaborated  / sophisticated. Use it once you have an account to login and download, not to register a new one.</li>
                               <li>If <b>Copy link</b> is not provided by the supported apps (such as official reddit app), please find <b>VIP Downloader</b> icon via regular <b>Share</b> intents as the last resorts. Be informed, only supported apps will be processed, though.</li>
                               <li>If <b>Copy link</b> <em>outside the internal web app</em> is not working, please use the provided internal web app interface regardless its limitations, and follow the above-outlined directions strictly. Only supported sites will work.</li>
+                              <li>If you keep getting 403 (Forbidden) message, the link is likely blocked, gated or restricted. Either you have to register or login first, pay premium subscription if any such requirements. Other failures like 404 (Not Found), etc. will also be prompted. At any rate, we cannot download if such failures happen, sorry. They are beyond our power. Delete such failing  processed links. Please try other links instead.</li>
+                              <li>Be sure <b>Battery saver</b> feature turned off specific for this app to allow downloads via background processing. This varies based on devices: <br>1. (System) Settings > Battery & performance > Battery saver : Off. <br>2. (System) Settings > Battery & performance > App battery saver > VIPDownloader > Background settings: No restrictions. Check out your system <b>Settings</b> for the correct location of this particular settings.</li>
                               <!-- <li>Basically two ways to download: <br>1. <b>Proactive</b>: you do long press on anything as outlined above. 2. <b>Passive</b>: you will be prompted an icon if a video is detected, normally after you play a video. Unfortunately this is not always working due to guess works, and live-streaming is not supported. Please bear with it.</li> -->
                             </ul>
                           </div>
