--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -16,7 +16,7 @@
   <link rel="revision" href="/project/vipinstagram/howto" />
   <title>Howto | gaus</title>
   <style>
-    html,body{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}img,video,audio,iframe{display:block;border:0}img,video,audio,iframe,pre,blockquote{width:100%;max-width:100%;height:auto;margin:1em auto}details summary::-webkit-details-marker{display:none}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #444;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}article header{font-weight:600;text-align:right;padding:15px}article header a{padding:5px 10px;text-decoration:none;}article header a:visited{color:#000}@media screen and (max-width: 1025px){.visible-desktop{visibility:hidden;position:absolute}}
+    html,body{padding:0;margin:0;font-size:14px;line-height:1.3;overflow-x:hidden}img,video,audio,iframe{display:block;border:0}img,video,audio,iframe,pre,blockquote{width:100%;max-width:100%;height:auto;margin:1em auto}details summary::-webkit-details-marker{display:none}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #444;position:relative;cursor:pointer;font-size:.82rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{line-height:1.6;margin:0 0 1rem;padding-top:1rem}article header{font-weight:600;text-align:right;padding:15px}article header a{padding:5px 10px;text-decoration:none;}article header a:visited{color:#000}@media screen and (max-width: 1025px){.visible-desktop{visibility:hidden;position:absolute}}
   </style>
 </head>
 
@@ -43,7 +43,7 @@
                         <details>
                           <summary>Instagram</summary>
                           <div>
-                            <b>A. Via internal web app interface:</b>
+                            <b>A. Via internal/ app web browser:</b>
                             This is a very minimal built-in browser. Everything is done in one step. Choose one, not all.
                             <ol>
                               <li>Long press on any small thumbnails (videos or images) at listing pages: <i>/tags, /explore, /profile, or search pages</i>, etc.</li>
@@ -57,7 +57,7 @@
                               <li>Hit <b>Copy link</b>.</li>
                               <li>Or hit <b>Share link</b>, and find <b>VIP Downloader</b> icon.</li>
                             </ol>
-                            <p>Be informed! Option B and scraping may require you providing dummy credentials via <b>Settings > Accounts</b> due to restrictions. Option B may trigger annoying <b>New login</b> email warnings due to being less persistent sessions. Please use the internal (option A) for convenience regardless its limitations -- due to being web app, not native app. The same principle likely applies to other supported sites, unless otherwise stated. Scraping requires Option A.</p>
+                            <p>Be informed! Scraping requires Option A. Option B and scraping may require you providing dummy credentials via <b>Settings > Accounts</b> due to restrictions. Option B may trigger annoying <b>New login</b> email warnings due to being less persistent sessions. Please use the internal (option A) for convenience regardless its limitations -- due to being web app, not native app. The same principle likely applies to other supported sites, unless otherwise stated.</p>
                             <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
 
                           </div>
