--- a/project/vipdrupal/faq/index.html
+++ b/project/vipdrupal/faq/index.html
@@ -16,7 +16,7 @@
   <link rel="revision" href="/project/vipdrupal/faq" />
   <title>FAQ | gaus</title>
   <style>
-    html,body{padding:0;margin:0;font-size:14px;line-height:1.3;overflow-x:hidden}details summary::-webkit-details-marker{display:none}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #444;position:relative;cursor:pointer;font-size:.82rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.page__title{visibility:hidden;position:absolute}}
+    html,body{color:#666;padding:0;margin:0;font-size:14px;line-height:1.3;overflow-x:hidden}details summary::-webkit-details-marker{display:none}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #444;position:relative;cursor:pointer;font-size:.82rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{line-height:1.6;margin:0 0 1rem;padding-top:1rem}@media screen and (max-width: 1025px){.page__title{visibility:hidden;position:absolute}}
   </style>
 </head>
 
